[gd_scene load_steps=4 format=3 uid="uid://bvqks084phcj7"]

[ext_resource type="Script" path="res://scripts/AnimationManager/AnimationManager.gd" id="1_vv1pv"]
[ext_resource type="Texture2D" uid="uid://fpqbctbhjl1a" path="res://DefaultAvatar.png" id="2_sglis"]

[sub_resource type="LabelSettings" id="LabelSettings_6gbbj"]
font_size = 24

[node name="AnimationManager" type="AspectRatioContainer"]
custom_minimum_size = Vector2(2000, 900)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1000.0
offset_top = -450.0
offset_right = 1000.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_vv1pv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AnimationLister" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/AnimationLister"]
layout_mode = 2
size_flags_horizontal = 0

[node name="AnimationLabel" type="Label" parent="HBoxContainer/AnimationLister/VBoxContainer"]
layout_mode = 2
text = "Animations"

[node name="AnimationList" type="ItemList" parent="HBoxContainer/AnimationLister/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
auto_height = true
text_overrun_behavior = 0
item_count = 2
max_columns = 2
item_0/text = "Animation one"
item_1/text = "Animation 2"

[node name="CreateAnimationButton" type="Button" parent="HBoxContainer/AnimationLister/VBoxContainer"]
layout_mode = 2
text = "Create"

[node name="AnimationEditor" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/AnimationEditor"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/AnimationEditor/VBoxContainer"]
layout_mode = 2
text = "Animation Manager"
label_settings = SubResource("LabelSettings_6gbbj")
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/AnimationEditor/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_constants/separation = 7

[node name="FileDialogButton" type="Button" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Import Image"

[node name="FileDialog" type="FileDialog" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true

[node name="RowsLabel" type="Label" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Rows"
horizontal_alignment = 1

[node name="RowsHBoxContainer" type="HBoxContainer" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/RowsHBoxContainer"]
layout_mode = 2
text = "-"

[node name="RowsText" type="LineEdit" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/RowsHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
editable = false

[node name="Button" type="Button" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/RowsHBoxContainer"]
layout_mode = 2
text = "+"

[node name="ColsLabel" type="Label" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Columns"
horizontal_alignment = 1

[node name="ColsHBoxContainer2" type="HBoxContainer" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/ColsHBoxContainer2"]
layout_mode = 2
text = "-"

[node name="ColsText" type="LineEdit" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/ColsHBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
editable = false

[node name="Button" type="Button" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/ColsHBoxContainer2"]
layout_mode = 2
text = "+"

[node name="CenterContainer" type="Control" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SpriteImage" type="Sprite2D" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
position = Vector2(246, 267)
texture = ExtResource("2_sglis")

[node name="Control" type="Control" parent="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/RowsHBoxContainer/Button2" to="." method="_on_rows_sub_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/RowsHBoxContainer/Button" to="." method="_on_rows_add_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/ColsHBoxContainer2/Button2" to="." method="_on_cols_sub_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AnimationEditor/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/ColsHBoxContainer2/Button" to="." method="_on_cols_add_button_pressed"]
